2009-06-14  Matevz Tadel  <matevz.tadel@ijs.si>

	Changes to make greed-demo run on mac.

	* greed/top-blob/gled-env-dump.csh:
	* greed/top-blob/gled-env.csh:
	* greed/top-blob/gled-env.sh:
	Set also DYLD_LIBRARY_PATH.

	* greed/top-blob/gled-env-dump.sh:
	Restore the file that somehow got zeroed in last check-in.
	Set also DYLD_LIBRARY_PATH.

2009-06-14  Matevz Tadel  <matevz.tadel@ijs.si>

	Fixes for mac build of DevIL.

	* external/DevIL/DevIL.pl:
	For mac, add /sw to CPPFLAGS and LDFLAGS - libpng and libjpeg are
	there.

2009-06-14  Matevz Tadel  <matevz.tadel@ijs.si>

	Changes for mac rsync specifics.

	* GledBuildExternal.pm:
	Make rsync listing work on mac.

2009-06-14  Matevz Tadel  <matevz.tadel@ijs.si>

	Fix cache update code.

	* GledBuildExternal.pm:
	Do not require directory listing with wildard as it does not work
	on local directories. Filter results instead.

	* update_cache.pl:
	make_cmd was not contructed properly after cache update.

2009-05-14  Matevz Tadel  <matevz.tadel@ijs.si>

	Changes for mac build.

	* distro-details.pl:
	Politically correct vendor name spelling.
	Fix version regexp.

	* external/DevIL/DevIL.pl:
	Do not build ILUT - has problems with GL.

	* external/fltk/fltk.pl:
	Do not use xft. Configure wih enable-quartz.

	* external/root/root.pl:
	Enforce 32-bit build - all other software (and whatever comes from
	fink) is built in 32-bit mode, too.

2009-04-26  Matevz Tadel  <matevz.tadel@ijs.si>

	Use latest OpenAL.

	* GledBuildExternal.pm:
	Add optional argument pre-command to
	use_defaults_for_remaining_targets(). This makes it easier to
	specify targets that require stuff like "cd build-dir" or
	". build.env" to be executed.

	* external/openal/openal.pl:
	Modify to build the latest OpenAL which uses CMake.

2009-04-25  Matevz Tadel  <matevz.tadel@ijs.si>

	First step towards darwin build; minor fix of fltk-mt.

	* distro-details.pl:
	Add preliminary support for darwin.

	* external/fltk-mt/fltk-mt.pl: