@@ -1,0 +1,35 @@
+#!/bin/sh
+#
+# make-root-src-dist.sh - make a source distribution of root
+#
+# Modified version of root/build/unix/makedistsrc.sh
+# Fix the following variables before running:
+
+svnurl="https://root.cern.ch/svn/root/branches/v5-24-00-patches"
+version="5.24.01"
+dir="root"
+tarfile="root-$version-gled.tar"
+
+echo "Checking out ..."
+
+rm -rf $dir
+mkdir $dir
+svn co $svnurl $dir
+
+echo "Fixing version crap ..."
+
+# generate etc/svninfo.txt
+cd $dir
+build/unix/svninfo.sh
+# remove .svn directories containing extra copy of the code
+find . -depth -name .svn -exec rm -rf {} \;
+cd ..
+
+echo "Making tarball ..."
+
+tar cf $tarfile $dir
+gzip -9 $tarfile
+
+#rm -rf $dir
+
+echo "Done!"
